--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx scripts/seed.ts",
-    "migrate:multi-tenant": "npx tsx scripts/migrate-to-multi-tenant.ts"
+    "migrate:multi-tenant": "npx tsx scripts/migrate-to-multi-tenant.ts",
+    "validate:oauth": "tsx scripts/validate-oauth.ts",
+    "test:oauth": "curl -s http://localhost:3000/api/health/oauth | jq . || curl -s http://localhost:3000/api/health/oauth"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
