Fix multiple bugs: function hoisting, duplicate variables, API key performance, and add setup scripts
Bug fixes:
- Fix function hoisting error in /api/v1/translations route
- Remove duplicate userContributions variable in analytics route
- Optimize API key validation to use indexed WHERE clause (O(1) instead of O(n))
- Remove unused projectMembersData query in comments route
- Fix incomplete retry logic in queue error handler
- Add try-catch for JSON parsing in multiple routes
- Add database transactions for bulk operations to prevent race conditions

New files:
- Add docker-compose.yml for PostgreSQL setup
- Add scripts/setup-env.ts for environment variable setup
- Add scripts/setup-oauth.ts for OAuth configuration
- Update .gitignore to exclude test artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ next-env.d.ts
 # Docs folder (contains non-committed documentation)
 /docs
 docs/
+
+# Test artifacts and temporary files
+testsprite_tests/tmp/
+*.tmp
